# ANIME-ANALYZER

./: CMakeLists.txt  JuceHeader.h
.github/workflows/: cmake-multi-platform.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
